<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_4dp"
    android:elevation="@dimen/dimen_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_secondary30"
        android:minHeight="@dimen/dimen_100dp"
        android:padding="@dimen/dimen_4dp">

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textViewDay"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewMaxTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/max_temperature"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewMinTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/min_temperature"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textViewDay"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textViewClimateType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:minHeight="@dimen/dimen_40dp"
                android:text="@string/climate_type"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageViewCloudType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:contentDescription="@string/cloud_type_image"
                android:minWidth="@dimen/dimen_60dp"
                android:minHeight="@dimen/dimen_60dp"
                app:srcCompat="@drawable/ic_sun" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>