<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_10dp"
        app:cardMaxElevation="@dimen/dimen_12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="true"
                android:background="@null"
                android:hint="@string/enter_your_city_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:minHeight="@dimen/dimen_50dp"
                android:paddingStart="@dimen/dimen_4dp"
                android:paddingEnd="@dimen/dimen_0dp"
                android:textColorHint="#757575"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:contentDescription="@string/search_image_view"
                android:minHeight="@dimen/dimen_50dp"
                android:padding="@dimen/dimen_4dp"
                app:srcCompat="@drawable/ic_search" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTodayClimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginEnd="@dimen/dimen_4dp"
        android:background="@color/purple_200"
        android:padding="@dimen/dimen_8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textViewCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:gravity="center"
            android:text="@string/city_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityName" />

        <TextView
            android:id="@+id/textViewClimateType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/climate_type"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

        <TextView
            android:id="@+id/textViewHighTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center"
            android:text="@string/high_temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewLowTemperature"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewClimateType" />

        <TextView
            android:id="@+id/textViewLowTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center"
            android:text="@string/low_temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="@+id/textViewClimateType"
            app:layout_constraintTop_toBottomOf="@+id/textViewClimateType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNextFourDaysClimate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_margin="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTodayClimate" />

</androidx.constraintlayout.widget.ConstraintLayout>